fix icon overflow bugs

--- a/style.css
+++ b/style.css
@@ -70,17 +70,22 @@ h3 {
 .mainleft-grid-items {
   background-color: #ffffff;
   border-radius: 6px;
-  min-height: 200px;
+  min-height: 250px;
   border-left: 9px solid #f0b429;
   padding: 1em;
   display: flex;
   flex-direction: column;
+
   /* justify-content: space-around; */
 }
 .mainleft-grid-items div {
   align-self: flex-end;
   margin-top: auto;
   margin-bottom: 0.6em;
+  margin-right: 1em;
+  display: flex;
+  justify-content: space-between;
+  width: 25%;
 }
 .mainleft-grid-items img {
   width: 2em;
